--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,31 +12,28 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background: #e5d0b3;
+}
+
+.show-menu {
+  transform: translateX(0);
+  z-index: 30;
+}
+
+@media screen and (min-width: 1024px) {
+  .show-menu {
+    transform: translateX(100%);
+  }
 }
 
 ::-webkit-scrollbar {
   width: 10px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
   background: #e5d0b3;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
   background: #855D49;
 }
-/* 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-} */
